; ModuleID = '/home/carl/AnghaBench/linux/drivers/iommu/extr_rockchip-iommu.c_rk_table_flush.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iommu/extr_rockchip-iommu.c_rk_table_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rk_iommu_domain = type { i32 }

@dma_dev = common dso_local global i32 0, align 4
@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rk_iommu_domain*, i32, i32)* @rk_table_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rk_table_flush(%struct.rk_iommu_domain* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rk_iommu_domain*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.rk_iommu_domain* %0, %struct.rk_iommu_domain** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = zext i32 %8 to i64
  %10 = mul i64 %9, 4
  store i64 %10, i64* %7, align 8
  %11 = load i32, i32* @dma_dev, align 4
  %12 = load i32, i32* %5, align 4
  %13 = load i64, i64* %7, align 8
  %14 = load i32, i32* @DMA_TO_DEVICE, align 4
  %15 = call i32 @dma_sync_single_for_device(i32 %11, i32 %12, i64 %13, i32 %14)
  ret void
}

declare dso_local i32 @dma_sync_single_for_device(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
